--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "ts-node-dev --respawn src/$npm_package_config_challenge/main.ts",
     "start:no-watch": "ts-node-dev src/$npm_package_config_challenge/main.ts",
     "test": "jest src/$npm_package_config_challenge/",
-    "test:watch": "jest --watch src/$npm_package_config_challenge/"
+    "test:watch": "jest --watch src/$npm_package_config_challenge/",
+    "compile": "tsc"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
