--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
         "module": "commonjs",
         "outDir": "dist",
         "rootDir": "src",
-        "sourceMap": true
+        "sourceMap": true,
+        "lib": [
+            "es2019"
+        ]
     }
 }
