--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "typescript": "^3.8.3"
   },
   "config": {
-    "challenge": "2020-08-27_rabbit-hunt"
+    "challenge": "2020-09-24_game-of-pig"
   }
 }
