--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   },
   "config": {
     "challenge": "2020-09-24_game-of-pig"
+  },
+  "dependencies": {
+    "@types/inquirer": "^7.3.1",
+    "inquirer": "^7.3.3"
   }
 }
